[package]
name = "async-profiler-agent"
version = "0.1.12"
description = "Rust agent for async-profiler"
license = "Apache-2.0"
repository = "https://github.com/async-profiler/rust-agent"
readme = "README.md"
edition = "2024"
resolver = "3" # msrv-aware resolver
rust-version = "1.88"

[dependencies]
async-trait = "0.1"
# not really an AWS crate so no need to disable default features
aws-arn = { version = "0.3", optional = true }
aws-config = { version = "1", optional = true, default-features = false }
aws-sdk-s3 = { version = "1", optional = true, default-features = false }
chrono = "0.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
libloading = "0.9"
reqwest = { version = "0.12", default-features = false, optional = true, features = ["charset", "http2"] }
ordered-float = { version = "5", features=["serde"]}
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt", "sync", "time"] }
tracing = "0.1"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
aws-smithy-mocks = "0.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["test-util", "full"] }
test-case = "3"
rand = "0.9"
humantime = "2"

[[example]]
name = 'simple'

[features]
default = ["s3", "aws-metadata"]
s3 = ["s3-no-defaults", "aws-config/default", "aws-sdk-s3/default"]
# A version of the s3 feature that does not enable AWS default features
s3-no-defaults = ["dep:aws-config", "dep:aws-sdk-s3"]
aws-metadata = ["aws-metadata-no-defaults", "aws-config/default", "reqwest/rustls-tls"]
# A version of the aws-metadata feature that does not enable AWS default features
aws-metadata-no-defaults = ["dep:reqwest", "dep:aws-config", "dep:aws-arn"]
# Tombstone feature for __unstable-fargate-cpu-count. This feature can no
# longer be disabled.
__unstable-fargate-cpu-count = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
